--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,1 @@
-<mat-toolbar color="primary">
-  <span style="margin: 0 auto">{{ appName }}</span>
-</mat-toolbar>
+<mat-toolbar color="primary">{{ appName }}</mat-toolbar>
