Added logo in Navbar.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,4 @@
-<mat-toolbar color="primary">{{ appName }}</mat-toolbar>
+<mat-toolbar color="primary">
+  <img src="assets/logo.png" alt="logo" style="margin-right: 5px" />
+  {{ appName }}
+</mat-toolbar>
