--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,23 @@
 <mat-toolbar color="primary">
   <img src="assets/logo.png" alt="logo" style="margin-right: 10px" />
   {{ appName }}
+  <span class="spacer"></span>
+  <button mat-icon-button aria-label="More icon" [matMenuTriggerFor]="menu">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>
+      <mat-icon>login</mat-icon>
+      <span>Login</span>
+    </button>
+    <button mat-menu-item>
+      <mat-icon>person_add</mat-icon>
+      <span>Join Us</span>
+    </button>
+    <button mat-menu-item>
+      <mat-icon>info</mat-icon>
+      <span>About Us</span>
+    </button>
+  </mat-menu>
 </mat-toolbar>
