Flex-layout changed to version 8.0.0

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,9 +2,11 @@
   <img src="assets/logo.png" alt="logo" style="margin-right: 10px" />
   {{ appName }}
   <span class="spacer"></span>
-  <button mat-icon-button aria-label="More icon" [matMenuTriggerFor]="menu">
-    <mat-icon>more_vert</mat-icon>
-  </button>
+  <div fxShow="true" fxHide.gt-sm="true">
+    <button mat-icon-button aria-label="More icon" [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+  </div>
 
   <mat-menu #menu="matMenu">
     <button mat-menu-item>
