Working on login page.

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+<div class="container" fxFlex fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center">
+  <div fxLayout="row wrap" style="width: 100%">
+    <div fxFlex="35" fxFlex.md="23" fxFlex.sm="11" fxFlex.xs="2"></div>
+    <app-login-card fxFlex="30" fxFlex.md="54" fxFlex.sm="78" fxFlex.xs="96"></app-login-card>
+    <div fxFlex="35" fxFlex.md="23" fxFlex.sm="11" fxFlex.xs="2"></div>
+  </div>
+</div>
