--- a/src/app/components/login-card/login-card.component.html
+++ b/src/app/components/login-card/login-card.component.html
@@ -1,1 +1,66 @@
-<mat-card>Login Card</mat-card>
+<mat-card class="header-card" [ngStyle]="{ backgroundColor: primaryColor }">
+  <mat-card-title class="header-card-title">Login</mat-card-title>
+</mat-card>
+<mat-card>
+  <mat-card-content>
+    <form [formGroup]="loginForm" (submit)="onFormSubmit()">
+      <!-- Username Input -->
+      <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input formControlName="email" matInput autocomplete="off" />
+        <button type="button" mat-button matPrefix mat-icon-button>
+          <mat-icon>person</mat-icon>
+        </button>
+        <mat-error *ngIf="loginForm?.get('email')?.hasError('required')"
+          ><mat-icon>error</mat-icon> Email is required.</mat-error
+        >
+        <mat-error
+          *ngIf="
+            !loginForm?.get('email')?.hasError('required') &&
+            loginForm?.get('email')?.hasError('email')
+          "
+          ><mat-icon>error</mat-icon> Please enter a valid Email.</mat-error
+        >
+      </mat-form-field>
+
+      <!-- Password Input -->
+      <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input
+          [type]="hide ? 'password' : 'text'"
+          formControlName="password"
+          matInput
+          autocomplete="off"
+        />
+        <button type="button" mat-button matPrefix mat-icon-button>
+          <mat-icon>lock</mat-icon>
+        </button>
+        <button
+          type="button"
+          mat-icon-button
+          matSuffix
+          (click)="hide = !hide"
+          [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hide"
+        >
+          <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button>
+        <mat-error *ngIf="loginForm?.get('password')?.hasError('required')"
+          ><mat-icon>error</mat-icon> Password is required</mat-error
+        >
+        <mat-error
+          *ngIf="
+            !loginForm?.get('password')?.hasError('required') &&
+            loginForm?.get('password')?.hasError('pattern')
+          "
+          ><mat-icon>error</mat-icon> Password should not contain spaces.</mat-error
+        >
+      </mat-form-field>
+
+      <!-- Actions -->
+      <mat-card-actions>
+        <app-loading-button [isLoading]="true" value="OK"></app-loading-button>
+      </mat-card-actions>
+    </form>
+  </mat-card-content>
+</mat-card>
