Alert Dialog added.

--- a/src/app/components/alert-dialog/alert-dialog.component.html
+++ b/src/app/components/alert-dialog/alert-dialog.component.html
@@ -3,7 +3,7 @@
   &nbsp; {{ data.message }}
 
   <span class="spacer"></span>
-  <button mat-icon-button aria-label="Close icon" (click)="closeSnackbar()">
+  <button mat-icon-button aria-label="Close icon" (click)="closeDialog()">
     <mat-icon>close</mat-icon>
   </button>
 </div>
