--- a/src/app/components/alert-dialog/alert-dialog.component.html
+++ b/src/app/components/alert-dialog/alert-dialog.component.html
@@ -1,9 +1,8 @@
-<div class="with-icon">
+<h1 mat-dialog-title>Hi, user.</h1>
+<div mat-dialog-content class="with-icon">
   <mat-icon>{{ data.iconName }}</mat-icon>
-  &nbsp; {{ data.message }}
-
-  <span class="spacer"></span>
-  <button mat-icon-button aria-label="Close icon" (click)="closeDialog()">
-    <mat-icon>close</mat-icon>
-  </button>
+  <p>{{ data.message }}</p>
+</div>
+<div mat-dialog-actions>
+  <button mat-button mat-dialog-close (click)="closeDialog()">Close</button>
 </div>
