--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -34,6 +34,7 @@
     color="accent"
     aria-label="Logout button with logout icon"
     *ngIf="!isLoggedOut()"
+    (click)="authService.logout()"
   >
     <mat-icon>logout</mat-icon>
   </button>
