--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -7,3 +7,10 @@
     height: calc(100vh - 56px);
   }
 }
+
+.forgotLink {
+  text-decoration: none;
+  width: 100%;
+  margin-top: 20px;
+  text-align: center;
+}
