--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
       fxFlex.xs="96"
     ></app-login-card>
 
-    <a routerLink="/register" class="forgotLink" [ngStyle]="{ color: primaryColor }"
+    <a routerLink="/forgot-password" class="forgotLink" [ngStyle]="{ color: primaryColor }"
       >Forgot your password?</a
     >
     <div fxFlex="35" fxFlex.md="25" fxFlex.sm="15" fxFlex.xs="2"></div>
