--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,17 +1,14 @@
 <div class="container" fxFlex fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center">
   <div fxLayout="row wrap" style="width: 100%">
     <div fxFlex="35" fxFlex.md="25" fxFlex.sm="15" fxFlex.xs="2"></div>
-    <app-login-card
-      [action]="onFormSubmit.bind(this)"
-      fxFlex="30"
-      fxFlex.md="50"
-      fxFlex.sm="70"
-      fxFlex.xs="96"
-    ></app-login-card>
 
-    <a routerLink="/forgot-password" class="forgotLink" [ngStyle]="{ color: primaryColor }"
-      >Forgot your password?</a
-    >
+    <div fxFlex="30" fxFlex.md="50" fxFlex.sm="70" fxFlex.xs="96" class="mid-div">
+      <app-login-card [action]="onFormSubmit.bind(this)"></app-login-card>
+      <br />
+      <a routerLink="/forgot-password" class="forgotLink" [ngStyle]="{ color: primaryColor }"
+        >Forgot your password?</a
+      >
+    </div>
     <div fxFlex="35" fxFlex.md="25" fxFlex.sm="15" fxFlex.xs="2"></div>
   </div>
 </div>
