--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -2,11 +2,7 @@
   <div fxLayout="row wrap" style="width: 100%">
     <div fxFlex="35" fxFlex.md="25" fxFlex.sm="15" fxFlex.xs="2"></div>
     <div fxFlex="30" fxFlex.md="50" fxFlex.sm="70" fxFlex.xs="96">
-      <app-forgot-card-above [action]="sendCode.bind(this)"></app-forgot-card-above>
-      <br />
-      <mat-divider></mat-divider>
-      <br />
-      <app-forgot-card-below [action]="changePassword.bind(this)"></app-forgot-card-below>
+      <app-forgot-card [action]="onSubmit.bind(this)"></app-forgot-card>
     </div>
     <div fxFlex="35" fxFlex.md="25" fxFlex.sm="15" fxFlex.xs="2"></div>
   </div>
