--- a/src/app/components/forgot-card/forgot-card.component.html
+++ b/src/app/components/forgot-card/forgot-card.component.html
@@ -1,4 +1,4 @@
-<app-header-card value="Password Reset"></app-header-card>
+<app-header-card value="Forgot Password"></app-header-card>
 <mat-card>
   <mat-card-content>
     <form [formGroup]="passwordResetForm" (submit)="onFormSubmit()">
