--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,14 +1,13 @@
 <div class="container" fxFlex fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center">
   <div fxLayout="row wrap" style="width: 100%">
-    <div fxFlex="35" fxFlex.md="25" fxFlex.sm="15" fxFlex.xs="2"></div>
-
-    <div fxFlex="30" fxFlex.md="50" fxFlex.sm="70" fxFlex.xs="96" class="mid-div">
+    <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="2"></div>
+    <div fxFlex="500px" fxFlex.md="500px" fxFlex.sm="500px" fxFlex.xs="96" class="mid-div">
       <app-login-card [action]="onFormSubmit.bind(this)"></app-login-card>
       <br />
       <a routerLink="/forgot-password" class="forgotLink" [ngStyle]="{ color: primaryColor }"
         >Forgot your password?</a
       >
     </div>
-    <div fxFlex="35" fxFlex.md="25" fxFlex.sm="15" fxFlex.xs="2"></div>
+    <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="2"></div>
   </div>
 </div>
