--- a/src/app/components/login-card/login-card.component.html
+++ b/src/app/components/login-card/login-card.component.html
@@ -7,7 +7,7 @@
         <mat-label>Email</mat-label>
         <input formControlName="email" matInput autocomplete="off" />
         <button type="button" mat-button matPrefix mat-icon-button>
-          <mat-icon>person</mat-icon>
+          <mat-icon>email</mat-icon>
         </button>
         <mat-error *ngIf="loginForm?.get('email')?.hasError('required')"
           ><mat-icon>error</mat-icon> Email is required.</mat-error
