--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,36 @@
-<p>profile works!</p>
+<div class="container" fxFlex fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center">
+  <div fxLayout="row wrap" style="width: 100%">
+    <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="2"></div>
+    <div fxFlex="800px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="96">
+      <div class="image-container">
+        <img
+          [src]="imagePath"
+          alt="Profile Background"
+          height="100%"
+          width="100%"
+          class="mat-elevation-z2"
+        />
+        <div class="name">{{ user?.firstName }} {{ user?.lastName }}</div>
+        <mat-spinner diameter="25" color="accent" *ngIf="isLoading"></mat-spinner>
+      </div>
+      <mat-tab-group>
+        <mat-tab label="Info" [disabled]="isLoading">
+          <app-user-info-card [user]="user"></app-user-info-card>
+        </mat-tab>
+        <mat-tab label="Edit" [disabled]="isLoading">
+          <!-- <app-user-general-update-card
+            [currentFirstName]="user.firstName"
+            [currentLastName]="user.lastName"
+            [action]="onGeneralUpdate.bind(this)"
+          ></app-user-general-update-card> -->
+
+          <mat-divider></mat-divider>
+
+          <!-- <app-user-password-update-card [action]="onPasswordUpdate.bind(this)">
+          </app-user-password-update-card> -->
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+    <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="2"></div>
+  </div>
+</div>
