--- a/src/app/pages/profile/profile.component.css
+++ b/src/app/pages/profile/profile.component.css
@@ -8,6 +8,10 @@
   }
 }
 
+::ng-deep .mat-tab-header-pagination {
+  display: none !important;
+}
+
 ::ng-deep.mat-tab-label,
 ::ng-deep.mat-ink-bar {
   width: 50%;
