--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxFlex fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center">
+<div class="container" fxFlex fxLayout="column" fxLayoutGap="10px">
   <div fxLayout="row wrap" style="width: 100%">
     <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
     <div fxFlex="800px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="98">
@@ -18,13 +18,27 @@
           <app-user-info-card [user]="user"></app-user-info-card>
         </mat-tab>
         <mat-tab label="Edit" [disabled]="isLoading">
-          <app-user-general-update-card
-            [user]="user"
-            [action]="onGeneralUpdate.bind(this)"
-          ></app-user-general-update-card>
+          <mat-accordion>
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title> Change General Info </mat-panel-title>
+              </mat-expansion-panel-header>
 
-          <!-- <app-user-password-update-card [action]="onPasswordUpdate.bind(this)">
-          </app-user-password-update-card> -->
+              <app-user-general-update-card
+                [user]="user"
+                [action]="onGeneralUpdate.bind(this)"
+              ></app-user-general-update-card>
+            </mat-expansion-panel>
+
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title> Change Password </mat-panel-title>
+              </mat-expansion-panel-header>
+
+              <app-user-password-update-card [action]="onPasswordUpdate.bind(this)">
+              </app-user-password-update-card>
+            </mat-expansion-panel>
+          </mat-accordion>
         </mat-tab>
       </mat-tab-group>
     </div>
