Current password and new password now cannot be same. Backend linked for password updation. Password updation complete.

--- a/src/app/components/user-password-update-card/user-password-update-card.component.html
+++ b/src/app/components/user-password-update-card/user-password-update-card.component.html
@@ -27,6 +27,14 @@
       "
       ><mat-icon>error</mat-icon> Password should not contain spaces.</mat-error
     >
+    <mat-error
+      *ngIf="
+        !passwordUpdateForm?.get('newPassword')?.hasError('required') &&
+        !passwordUpdateForm?.get('newPassword')?.hasError('pattern') &&
+        passwordUpdateForm?.get('newPassword')?.hasError('same')
+      "
+      ><mat-icon>error</mat-icon> New password and Current password are same.</mat-error
+    >
   </mat-form-field>
 
   <mat-form-field appearance="outline">
