Added drawer links and corresponding components. Added profile button on navbar.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -40,6 +40,18 @@
   </div>
 
   <button
+    class="right-icon"
+    mat-icon-button
+    color="accent"
+    aria-label="Profile button with Account Icon"
+    *ngIf="!isLoggedOut()"
+    routerLink="/profile"
+  >
+    <mat-icon>account_circle</mat-icon>
+  </button>
+
+  <button
+    class="right-icon"
     mat-icon-button
     color="accent"
     aria-label="Logout button with logout icon"
