ng2-charts library added. Colors added snackbar.

--- a/src/app/components/alert-snackbar/alert-snackbar.component.html
+++ b/src/app/components/alert-snackbar/alert-snackbar.component.html
@@ -1,5 +1,5 @@
 <div class="with-icon">
-  <mat-icon>{{ data.iconName }}</mat-icon>
+  <mat-icon [color]="data.color">{{ data.iconName }}</mat-icon>
   &nbsp; {{ data.message }}
 
   <span class="spacer"></span>
