Removed ng2-charts module.

--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,14 +1,2 @@
 <app-loading-header-card [value]="title"></app-loading-header-card>
-<mat-card>
-  <canvas
-    baseChart
-    chartType="pie"
-    [legend]="false"
-    [data]="chartData"
-    [labels]="chartLabels"
-    [options]="chartOptions"
-    [plugins]="chartPlugins"
-    [colors]="chartColors"
-  >
-  </canvas>
-</mat-card>
+<mat-card></mat-card>
