Removed all graphs logic.

--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -1,12 +1,1 @@
-<div class="container" fxFlex fxLayout="column" fxLayoutAlign="center center">
-  <div fxLayout="row wrap" fxLayoutGap="10px grid" style="width: 99%" fxLayoutAlign="center center">
-    <div fxFlex="500px" fxFlex.md="400px" fxFlex.sm="350px" fxFlex.xs="100%">
-      <app-loading-header-card value="Debit Pie Chart"></app-loading-header-card>
-      <app-pie-chart title="Debit Pie Chart"></app-pie-chart>
-    </div>
-    <div fxFlex="500px" fxFlex.md="400px" fxFlex.sm="350px" fxFlex.xs="100%">
-      <app-loading-header-card value="Expense Line Chart"></app-loading-header-card>
-      <app-line-chart></app-line-chart>
-    </div>
-  </div>
-</div>
+<p>statistics works!</p>
