Added ledgerkeep fields to profile page.

--- a/src/app/components/user-info-row/user-info-row.component.html
+++ b/src/app/components/user-info-row/user-info-row.component.html
@@ -7,6 +7,6 @@
   </div>
   <div class="content">
     <p class="heading">{{ heading }}</p>
-    <p class="value">{{ value }}</p>
+    <p class="value" [ngStyle]="{ color: color }">{{ value }}</p>
   </div>
 </div>
