--- a/src/app/pages/my-categories/my-categories.component.html
+++ b/src/app/pages/my-categories/my-categories.component.html
@@ -2,13 +2,14 @@
   <div fxLayout="row wrap" style="width: 100%">
     <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
     <div fxFlex="1000px" fxFlex.md="700px" fxFlex.sm="600px" fxFlex.xs="98">
-      <app-loading-header-card value="Categories" [isLoading]="true"></app-loading-header-card>
-      <mat-form-field class="w-100">
+      <app-loading-header-card value="Categories" [isLoading]="isLoading"></app-loading-header-card>
+      <mat-form-field class="w-100 mt-5">
         <input
           matInput
           (keyup)="applySearch($event.target.value)"
           placeholder="Search"
           autocomplete="off"
+          [disabled]="isLoading"
         />
       </mat-form-field>
 
@@ -25,21 +26,22 @@
           <td mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
 
-        <!-- Transaction Count Column -->
-        <ng-container matColumnDef="txCount">
-          <th mat-header-cell *matHeaderCellDef>Transactions</th>
-          <td mat-cell *matCellDef="let element">{{ element.txCount }}</td>
-        </ng-container>
-
         <!-- Balance Column -->
         <ng-container matColumnDef="balance">
           <th mat-header-cell *matHeaderCellDef>Balance</th>
-          <td mat-cell *matCellDef="let element">{{ element.balance }}</td>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            [ngStyle]="{ color: element.balance > 0 ? 'green' : 'red' }"
+          >
+            {{ element.balance > 0 ? '+' : '' }}{{ element.balance }}
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+      &nbsp;
     </div>
     <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
   </div>
