--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -46,6 +46,7 @@
           </mat-accordion>
         </mat-tab>
       </mat-tab-group>
+      &nbsp;
     </div>
     <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
   </div>
