--- a/src/app/components/loading-button/loading-button.component.html
+++ b/src/app/components/loading-button/loading-button.component.html
@@ -1,4 +1,9 @@
-<button mat-raised-button color="primary" [disabled]="isButtonDisabled()">
+<button
+  mat-raised-button
+  color="primary"
+  [disabled]="isButtonDisabled()"
+  [ngStyle]="{ height: height, width: width }"
+>
   <div *ngIf="!isButtonDisabled()">{{ value }}</div>
   <mat-progress-spinner
     *ngIf="isSpinnerVisible()"
