Loading button does not have height-width by default.

--- a/src/app/components/login-card/login-card.component.html
+++ b/src/app/components/login-card/login-card.component.html
@@ -59,6 +59,8 @@
       <mat-card-actions>
         <app-loading-button
           [isLoading]="isLoading"
+          height="50px"
+          width="96%"
           value="OK"
           (click)="onFormSubmit()"
         ></app-loading-button>
