--- a/src/app/components/new-category-dialog/new-category-dialog.component.html
+++ b/src/app/components/new-category-dialog/new-category-dialog.component.html
@@ -6,5 +6,5 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions align="end">
-  <app-loading-button value="Create" height="36px" width="80px"></app-loading-button>
+  <app-loading-button value="Create"></app-loading-button>
 </div>
