--- a/src/app/components/password-reset-card/password-reset-card.component.html
+++ b/src/app/components/password-reset-card/password-reset-card.component.html
@@ -41,6 +41,8 @@
       <mat-card-actions>
         <app-loading-button
           [isLoading]="isLoading"
+          height="50px"
+          width="96%"
           value="OK"
           (click)="onSubmit()"
         ></app-loading-button>
