--- a/src/app/components/loading-button/loading-button.component.html
+++ b/src/app/components/loading-button/loading-button.component.html
@@ -1,9 +1,4 @@
-<button
-  mat-raised-button
-  color="primary"
-  [disabled]="isButtonDisabled()"
-  [ngStyle]="{ height: height, width: width }"
->
+<button mat-raised-button color="primary" [disabled]="isButtonDisabled()" [ngStyle]="buttonStyle">
   <div *ngIf="!isButtonDisabled()">{{ value }}</div>
   <mat-progress-spinner
     *ngIf="isSpinnerVisible()"
