Profile page loading buttons updated. button-container styles removed.

--- a/src/app/components/user-general-update-card/user-general-update-card.component.html
+++ b/src/app/components/user-general-update-card/user-general-update-card.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <mat-card-actions>
-    <div class="button-container">
+    <div align="end">
       <app-loading-button [isLoading]="isLoading" value="Update" (click)="onSubmit()">
       </app-loading-button>
     </div>
