--- a/src/app/components/user-password-update-card/user-password-update-card.component.html
+++ b/src/app/components/user-password-update-card/user-password-update-card.component.html
@@ -53,12 +53,9 @@
   </mat-form-field>
 
   <mat-card-actions>
-    <div class="button-container">
-      <app-loading-button
-        [isLoading]="isLoading"
-        value="Update"
-        (click)="onSubmit()"
-      ></app-loading-button>
+    <div align="end">
+      <app-loading-button [isLoading]="isLoading" value="Update" (click)="onSubmit()">
+      </app-loading-button>
     </div>
   </mat-card-actions>
 </form>
