--- a/src/app/components/new-category-dialog/new-category-dialog.component.html
+++ b/src/app/components/new-category-dialog/new-category-dialog.component.html
@@ -1,10 +1,26 @@
 <h1 mat-dialog-title>New Category</h1>
 <div mat-dialog-content>
-  <mat-form-field>
-    <mat-label>Name</mat-label>
-    <input formControlName="name" matInput autocomplete="off" />
-  </mat-form-field>
+  <form [formGroup]="newCategoryForm" (submit)="onSubmit()">
+    <mat-form-field>
+      <mat-label>Name</mat-label>
+      <input formControlName="name" matInput autocomplete="off" />
+      <mat-error *ngIf="newCategoryForm?.get('name')?.hasError('required')"
+        ><mat-icon>error</mat-icon> Field is required.</mat-error
+      >
+      <mat-error
+        *ngIf="
+          !newCategoryForm?.get('name')?.hasError('required') &&
+          newCategoryForm?.get('name')?.hasError('pattern')
+        "
+        ><mat-icon>error</mat-icon> Field contains invalid characters.</mat-error
+      >
+    </mat-form-field>
+  </form>
 </div>
 <div mat-dialog-actions align="end">
-  <app-loading-button value="Create"></app-loading-button>
+  <app-loading-button
+    value="Create"
+    (click)="onSubmit()"
+    [isLoading]="isLoading"
+  ></app-loading-button>
 </div>
