--- a/src/app/pages/my-categories/my-categories.component.html
+++ b/src/app/pages/my-categories/my-categories.component.html
@@ -45,7 +45,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="rowClick(row)"></tr>
       </table>
       &nbsp;
     </div>
