--- a/src/app/components/transaction-filter-sheet/transaction-filter-sheet.component.html
+++ b/src/app/components/transaction-filter-sheet/transaction-filter-sheet.component.html
@@ -1,1 +1,53 @@
 <p class="filter-title">Transaction Filter</p>
+
+<mat-grid-list cols="2" rowHeight="75px">
+  <form>
+    <mat-grid-tile>
+      <mat-form-field appearance="outline" class="w-90">
+        <mat-label>Start Date</mat-label>
+        <input id="startDateInput" matInput [matDatepicker]="startDatePicker" autocomplete="off" />
+        <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+        <mat-datepicker #startDatePicker></mat-datepicker>
+      </mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <mat-form-field appearance="outline" class="w-90">
+        <mat-label>End Date</mat-label>
+        <input id="endDateInput" matInput [matDatepicker]="endDatePicker" autocomplete="off" />
+        <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+        <mat-datepicker #endDatePicker></mat-datepicker>
+      </mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <mat-form-field appearance="outline" class="w-90">
+        <mat-label>Start Amount</mat-label>
+        <input id="startAmountInput" matInput type="number" autocomplete="off" />
+      </mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <mat-form-field appearance="outline" class="w-90">
+        <mat-label>End Amount</mat-label>
+        <input id="endAmountInput" matInput type="number" autocomplete="off" />
+      </mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+      <mat-form-field appearance="outline" class="w-95">
+        <mat-label>Category</mat-label>
+        <input id="categoryInput" matInput autocomplete="off" />
+      </mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+      <mat-form-field appearance="outline" class="w-95">
+        <mat-label>Description Hint</mat-label>
+        <input id="descriptionHintInput" matInput autocomplete="off" />
+      </mat-form-field>
+    </mat-grid-tile>
+  </form>
+</mat-grid-list>
+
+<div align="end">
+  <button mat-raised-button color="primary">Apply</button>
+  &nbsp;
+  <button mat-raised-button>Clear</button>
+</div>
+&nbsp;
