--- a/src/app/components/transaction-filter-sheet/transaction-filter-sheet.component.html
+++ b/src/app/components/transaction-filter-sheet/transaction-filter-sheet.component.html
@@ -1,53 +1,100 @@
 <p class="filter-title">Transaction Filter</p>
 
 <mat-grid-list cols="2" rowHeight="75px">
-  <form>
+  <form [formGroup]="filterForm">
     <mat-grid-tile>
       <mat-form-field appearance="outline" class="w-90">
         <mat-label>Start Date</mat-label>
-        <input id="startDateInput" matInput [matDatepicker]="startDatePicker" autocomplete="off" />
+        <input
+          id="startDateInput"
+          formControlName="startDate"
+          matInput
+          [matDatepicker]="startDatePicker"
+          autocomplete="off"
+        />
         <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #startDatePicker></mat-datepicker>
+        <mat-error *ngIf="filterForm?.get('startDate')?.hasError('invalid')"
+          ><mat-icon>error</mat-icon> Invalid date.</mat-error
+        >
       </mat-form-field>
     </mat-grid-tile>
     <mat-grid-tile>
       <mat-form-field appearance="outline" class="w-90">
         <mat-label>End Date</mat-label>
-        <input id="endDateInput" matInput [matDatepicker]="endDatePicker" autocomplete="off" />
+        <input
+          id="endDateInput"
+          formControlName="endDate"
+          matInput
+          [matDatepicker]="endDatePicker"
+          autocomplete="off"
+        />
         <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #endDatePicker></mat-datepicker>
+        <mat-error *ngIf="filterForm?.get('endDate')?.hasError('invalid')"
+          ><mat-icon>error</mat-icon> Invalid date.</mat-error
+        >
+        <mat-error
+          *ngIf="
+            !filterForm?.get('endDate')?.hasError('invalid') &&
+            filterForm?.get('endDate')?.hasError('tooLow')
+          "
+          ><mat-icon>error</mat-icon> Too Low.</mat-error
+        >
       </mat-form-field>
     </mat-grid-tile>
     <mat-grid-tile>
       <mat-form-field appearance="outline" class="w-90">
         <mat-label>Start Amount</mat-label>
-        <input id="startAmountInput" matInput type="number" autocomplete="off" />
+        <input
+          id="startAmountInput"
+          formControlName="startAmount"
+          matInput
+          type="number"
+          autocomplete="off"
+        />
+        <mat-error *ngIf="filterForm?.get('startAmount')?.hasError('invalid')"
+          ><mat-icon>error</mat-icon> Invalid Amount.</mat-error
+        >
       </mat-form-field>
     </mat-grid-tile>
     <mat-grid-tile>
       <mat-form-field appearance="outline" class="w-90">
         <mat-label>End Amount</mat-label>
-        <input id="endAmountInput" matInput type="number" autocomplete="off" />
+        <input
+          id="endAmountInput"
+          formControlName="endAmount"
+          matInput
+          type="number"
+          autocomplete="off"
+        />
+        <mat-error *ngIf="filterForm?.get('endAmount')?.hasError('invalid')"
+          ><mat-icon>error</mat-icon> Invalid Amount.</mat-error
+        >
+        <mat-error
+          *ngIf="
+            !filterForm?.get('endAmount')?.hasError('invalid') &&
+            filterForm?.get('endAmount')?.hasError('tooLow')
+          "
+          ><mat-icon>error</mat-icon> Too Low.</mat-error
+        >
       </mat-form-field>
     </mat-grid-tile>
     <mat-grid-tile colspan="2">
       <mat-form-field appearance="outline" class="w-95">
         <mat-label>Category</mat-label>
-        <input id="categoryInput" matInput autocomplete="off" />
-      </mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile colspan="2">
-      <mat-form-field appearance="outline" class="w-95">
-        <mat-label>Description Hint</mat-label>
-        <input id="descriptionHintInput" matInput autocomplete="off" />
+        <input id="categoryInput" formControlName="category" matInput autocomplete="off" />
+        <mat-error *ngIf="filterForm?.get('category')?.hasError('pattern')"
+          ><mat-icon>error</mat-icon> Contains invalid characters.</mat-error
+        >
       </mat-form-field>
     </mat-grid-tile>
   </form>
 </mat-grid-list>
 
 <div align="end">
-  <button mat-raised-button color="primary">Apply</button>
+  <button mat-raised-button color="primary" (click)="processQuery()">Apply</button>
   &nbsp;
-  <button mat-raised-button>Clear</button>
+  <button mat-raised-button (click)="clearQuery()">Clear</button>
 </div>
 &nbsp;
