--- a/src/app/pages/my-transactions/my-transactions.component.html
+++ b/src/app/pages/my-transactions/my-transactions.component.html
@@ -7,7 +7,7 @@
         [isLoading]="isLoading"
       ></app-loading-header-card>
 
-      <div class="mat-elevation-z2">
+      <div class="mat-elevation-z2 mb-100">
         <table mat-table [dataSource]="dataSource">
           <!-- Serial Column -->
           <ng-container matColumnDef="index">
@@ -18,7 +18,14 @@
           <!-- Amount Column -->
           <ng-container matColumnDef="amount">
             <th mat-header-cell *matHeaderCellDef class="ta-c">Amount</th>
-            <td mat-cell *matCellDef="let element" class="ta-c">{{ element.amount }}</td>
+            <td
+              mat-cell
+              *matCellDef="let element"
+              class="ta-c"
+              [ngStyle]="{ color: element.amount > 0 ? 'green' : 'red' }"
+            >
+              {{ element.amount > 0 ? '+' : '' }}{{ element.amount }}
+            </td>
           </ng-container>
 
           <!-- Category Column -->
@@ -39,8 +46,6 @@
 
         <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
       </div>
-
-      &nbsp;
     </div>
     <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
   </div>
