--- a/src/app/components/transaction-filter-sheet/transaction-filter-sheet.component.html
+++ b/src/app/components/transaction-filter-sheet/transaction-filter-sheet.component.html
@@ -1,7 +1,9 @@
 <p class="filter-title">Transaction Filter</p>
 
+<mat-spinner diameter="20" class="spinner" *ngIf="isLoading"></mat-spinner>
+
 <mat-grid-list cols="2" rowHeight="75px">
-  <form [formGroup]="filterForm">
+  <form [formGroup]="filterForm" (submit)="processQuery()">
     <mat-grid-tile>
       <mat-form-field appearance="outline" class="w-90">
         <mat-label>Start Date</mat-label>
@@ -83,9 +85,14 @@
     <mat-grid-tile colspan="2">
       <mat-form-field appearance="outline" class="w-95">
         <mat-label>Category</mat-label>
-        <input id="categoryInput" formControlName="category" matInput autocomplete="off" />
+        <mat-select formControlName="category">
+          <mat-option>-</mat-option>
+          <mat-option *ngFor="let name of categories" [value]="name">
+            {{ name }}
+          </mat-option>
+        </mat-select>
         <mat-error *ngIf="filterForm?.get('category')?.hasError('pattern')"
-          ><mat-icon>error</mat-icon> Contains invalid characters.</mat-error
+          ><mat-icon>error</mat-icon> Field contains invalid characters.</mat-error
         >
       </mat-form-field>
     </mat-grid-tile>
@@ -93,8 +100,10 @@
 </mat-grid-list>
 
 <div align="end">
-  <button mat-raised-button color="primary" (click)="processQuery()">Apply</button>
+  <button mat-raised-button color="primary" (click)="processQuery()" [disabled]="isLoading">
+    Apply
+  </button>
   &nbsp;
-  <button mat-raised-button (click)="clearQuery()">Clear</button>
+  <button mat-raised-button (click)="clearQuery()" [disabled]="isLoading">Clear</button>
 </div>
 &nbsp;
