--- a/src/app/pages/edit-transaction/edit-transaction.component.html
+++ b/src/app/pages/edit-transaction/edit-transaction.component.html
@@ -11,6 +11,7 @@
         [isLoading]="isLoading"
         [categories]="categories"
         [updateAction]="updateTransaction.bind(this)"
+        [delAction]="openDeleteDialog.bind(this)"
       ></app-edit-transaction-card>
     </div>
     <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
