--- a/src/app/pages/my-categories/my-categories.component.html
+++ b/src/app/pages/my-categories/my-categories.component.html
@@ -48,7 +48,7 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element" class="ta-r">
-            <button mat-icon-button color="warn" (click)="deleteCategory(element)">
+            <button mat-icon-button color="warn" (click)="deleteCategory($event, element)">
               <mat-icon>delete_outline</mat-icon>
             </button>
           </td>
