--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -1,1 +1,13 @@
-<p>statistics works!</p>
+<div class="container" fxFlex fxLayout="column" fxLayoutGap="10px">
+  <div fxFlex="50" fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
+    <div fxFlex="50">
+      <mat-card></mat-card>
+    </div>
+    <div fxFlex="50">
+      <mat-card></mat-card>
+    </div>
+  </div>
+  <div fxFlex="50">
+    <mat-card></mat-card>
+  </div>
+</div>
