--- a/src/app/pages/statistics/statistics.component.css
+++ b/src/app/pages/statistics/statistics.component.css
@@ -1,14 +1,7 @@
 .container {
-  height: calc(100vh - 64px);
-}
-
-@media only screen and (max-width: 599px) {
-  .container {
-    height: calc(100vh - 56px);
-  }
-}
-
-mat-card {
   height: 100%;
-  padding: 0;
+}
+
+.chart {
+  height: 100%;
 }
