--- a/src/app/components/new-category-dialog/new-category-dialog.component.html
+++ b/src/app/components/new-category-dialog/new-category-dialog.component.html
@@ -18,9 +18,5 @@
   </form>
 </div>
 <div mat-dialog-actions align="end">
-  <app-loading-button
-    value="Create"
-    (click)="onSubmit()"
-    [isLoading]="isLoading"
-  ></app-loading-button>
+  <button mat-raised-button color="primary" (click)="onSubmit()">Create</button>
 </div>
