--- a/src/app/pages/credit-pie-table/credit-pie-table.component.html
+++ b/src/app/pages/credit-pie-table/credit-pie-table.component.html
@@ -1,1 +1,6 @@
 <p>credit-pie-table works!</p>
+<app-bottom-fab-button
+  iconName="filter_alt"
+  [disabled]="isLoading"
+  (click)="openFilterSheet()"
+></app-bottom-fab-button>
