Pie query sheet added to debit pie page.

--- a/src/app/pages/debit-pie-table/debit-pie-table.component.html
+++ b/src/app/pages/debit-pie-table/debit-pie-table.component.html
@@ -1,1 +1,5 @@
-<p>debit-pie-table works!</p>
+<app-bottom-fab-button
+  iconName="filter_alt"
+  [disabled]="isLoading"
+  (click)="openFilterSheet()"
+></app-bottom-fab-button>
