--- a/src/app/components/line-chart/line-chart.component.html
+++ b/src/app/components/line-chart/line-chart.component.html
@@ -6,7 +6,7 @@
   <mat-card-content>
     <div echarts (chartInit)="onChartInit($event)" [options]="options" theme="macarons"></div>
     <div align="end">
-      <button mat-raised-button [routerLink]="moreLink">More</button>
+      <button mat-raised-button [routerLink]="moreLink" *ngIf="!hideMore">More</button>
     </div>
   </mat-card-content>
 </mat-card>
